--- a/homeRR.html
+++ b/homeRR.html
@@ -81,7 +81,7 @@ document.getElementById("backArrow").style.display = "inline-block";
   document.getElementById("refresh").addEventListener('click', function() {
             location.reload();
         }); document.getElementById("help").addEventListener('click', function() {
-     window.location.href = '../help.html';
+     window.location.href = 'help.html';
  });
         </script>
 </body>
