--- a/help.html
+++ b/help.html
@@ -59,12 +59,6 @@ Current Year - 2014 = 2024 - 2014 = 10.<br> Therefore, Enter "10" in this field.
  <div id="footer">
      <p>Developed By <b>Yasir Divde</b></p>
  </div>
- <script>   document.getElementById("backArrow").addEventListener('click', function() {
-     window.location.href = '../homeRR.html';
- });
- document.getElementById("help").addEventListener('click', function() {
-     window.location.href = '../help.html';
- }); 
- </script>
+ <script src="share.js"></script>
 </body>
 </html>
