--- a/homeRR.html
+++ b/homeRR.html
@@ -30,7 +30,7 @@
      </div>
     <br>
     <div class="main">
-        <marquee>RATES ARE UPDATED FOR 1st April 2024 to 31st March 2025.</marquee>
+        <marquee>Ready Reckoner Rates updated for year 2025-26: valid till 31st March 2026.</marquee>
         <div id="refresh"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></div>
         <div id="type">
         <h4 style="margin:10px;">Select Property Type:</h4>
