--- a/LLSD/vary.html
+++ b/LLSD/vary.html
@@ -65,7 +65,7 @@
   <button id="share">
    <span class="material-symbols-outlined">share</span>
    <span>SHARE</span>
-  </button><br>
+  </button><br><br>
   <button id="back">
    <span class="material-symbols-outlined">arrow_back</span>
    <span>BACK</span>
