--- a/help.html
+++ b/help.html
@@ -28,7 +28,7 @@
 <body>
     <div id="nav">
       <h3 style="color: white; font-size: 18px; float: left; margin-top: 5px;"><a href="index.html" id="start"><i class='bx bx-home-alt'></i></a>E-Valuation RR - Help</h3>
-      <button style="float: right; color: white; background: #f02c2d; border: 2px solid white; padding: 5px 7px; border-radius: 10px;" id="help">? HELP</button>
+      <a href="homeRR.html"><button style="float: right; color: white; background: #f02c2d; border: 2px solid white; padding: 5px 7px; border-radius: 10px;" id="help">? HELP</button></a>
   </div>
     <br>
     <div class="main">
