--- a/help.html
+++ b/help.html
@@ -28,12 +28,12 @@
 <body>
     <div id="nav">
       <h3 style="color: white; font-size: 18px; float: left; margin-top: 5px;"><a href="index.html" id="start"><i class='bx bx-home-alt'></i></a>E-Valuation RR - Help</h3>
-      <a href="homeRR.html"><button style="float: right; color: white; background: #f02c2d; border: 2px solid white; padding: 5px 7px; border-radius: 10px;" id="help">? HELP</button></a>
+      <button style="float: right; color: white; background: #f02c2d; border: 2px solid white; padding: 5px 7px; border-radius: 10px;" id="help">? HELP</button>
   </div>
     <br>
     <div class="main">
         <marquee>RATES ARE UPDATED FOR 1st April 2024 to 31st March 2025.</marquee>
-        <div id="refresh"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></div>
+        <div id="refresh"><a href="homeRR.html"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></a></div>
  <div id="helpSection">
   <h4>1. Select Sector Number: </h4>
   <p>
