--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -16,7 +16,7 @@
   </div>
   <div class="wrapper">
   	<div class="registration_form">
-  	    <a href="homeRR.html"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></a>
+  	    <a href="../homeRR.html"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></a>
   	     <button id="showStampDuty"><i class='bx bx-search' ></i>Stamp Duty</button>
   	     
    <div class="modal-overlay" id="modalOverlay">
