--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -107,6 +107,10 @@
   		 			<label for="area">Carpet Area (in Sq. Mtr)</label>
  		<input name="area" type="number" id="PropArea" required>
   				</div>
+          <div class="input_wrap">
+  		 			<label for="Tarea">Terrace/Open Balcony Area (in Sq. Mtr)</label>
+ 		<input name="Tarea" type="number" id="TerArea" required>
+  				</div>
   				<div class="input_wrap">
   					<label for="depreciation">Depreciation/Ghasara (in Years)</label>
   					<input name="depghas" type="number" id="depghas" required>
