--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -159,6 +159,9 @@
       <td colspan="1"><b><span id="CArea">76.02</span> m²</b></td>
     </tr>
     <tr>
+      <td colspan="3">Terrace Area</td>
+      <td colspan="1"><b><span id="TerArea">0</span> m²</b>
+    <tr>
       <td colspan="3">Floor Number</td>
       <td colspan="1"><b><span id="flrN">7</span></b></td>
     </tr>
