--- a/Taloja/flat.html
+++ b/Taloja/flat.html
@@ -91,6 +91,10 @@
   		 			<label for="area">Carpet Area (in Sq. Mtr)</label>
  		<input name="area" type="number" id="PropArea" required>
   				</div>
+           <div class="input_wrap">
+  		 			<label for="Tarea">Terrace/Open Balcony Area (in Sq. Mtr)</label>
+ 		<input name="Tarea" type="number" id="TerraceArea" required>
+  				</div>
   				<div class="input_wrap">
   					<label for="depreciation">Depreciation/Ghasara (in Years)</label>
   					<input name="depghas" type="number" id="depghas" required>
@@ -137,6 +141,10 @@
     <tr>
       <td colspan="3">Built-up Area</td>
       <td colspan="1"><b><span id="CArea">76.02</span> m²</b></td>
+    </tr>
+    <tr>
+      <td colspan="3">Terrace Area</td>
+      <td colspan="1"><b><span id="TerArea">0</span> m²</b></td>
     </tr>
     <tr>
       <td colspan="3">Floor Number</td>
