--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -109,7 +109,7 @@
   				</div>
           <div class="input_wrap">
   		 			<label for="Tarea">Terrace/Open Balcony Area (in Sq. Mtr)</label>
- 		<input name="Tarea" type="number" id="TerArea" required>
+ 		<input name="Tarea" type="number" id="TerraceArea" required>
   				</div>
   				<div class="input_wrap">
   					<label for="depreciation">Depreciation/Ghasara (in Years)</label>
