--- a/Kharghar/shop.html
+++ b/Kharghar/shop.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <title>Ready Reckoner Valuation</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -183,7 +184,11 @@
     </tr>
   </table>
   </div>
-  <center>	<img src="../share.png" id="share" alt="shareButton">
+ <center>
+   <button id="share">
+   <span class="material-symbols-outlined">share</span>
+   <span>SHARE</span>
+  </button><br><br>
 </center>
 <div id="footer">
      <p>Developed By <b>Yasir Divde</b></p>
