--- a/help.html
+++ b/help.html
@@ -43,7 +43,12 @@
   <p>
       Enter the carpet area of the property in <b>square meters (Sq. Mtr.) </b>as measured or specified in property documents <b>(Index II)</b>. <br> Ensure accurate measurement to avoid discrepancies in valuation.
  </p><br><hr><br>
-<h4>3. Depreciation / Ghasara: </h4>
+<h4>3. Terrace / Open Balcony Area: </h4>
+<p>
+    In cases where the <b>terrace</b> or <b>open balcony area</b> is explicitly specified as a separate entry in the registered property document <b>(Index II)</b>, the area must be entered in <b>square meters (Sq. Mtr.)</b>. <br>
+    If such an area is not distinctly mentioned in the Index II, kindly enter <b>0</b> in this field.
+</p><br><hr><br>
+<h4>4. Depreciation / Ghasara: </h4>
   <p>
       Depreciation or "Ghasara" accounts for the age of the property and the reduction in its value over time due to wear and tear or obsolescence. <br> Enter the number of years since the property was constructed. <br> <h5>Example: </h5>
   <p>
@@ -51,7 +56,7 @@ For a building that recieved OC in year 2014: <br>
 Current Year - 2014 = 2024 - 2014 = 10.<br> Therefore, Enter "10" in this field.
   </p>    
  </p><br><hr><br>
-<h4>4. Floor Number: </h4>
+<h4>5. Floor Number: </h4>
   <p>
  Enter the numerical value of the floor number.<br> For example, ground floor = 0, first floor = 1, second floor = 2, and so on.
  </p>
