--- a/Kharghar/shop.html
+++ b/Kharghar/shop.html
@@ -128,7 +128,7 @@
     <tr>
     <td colspan="1">District: <b>Raigad</b></td>
     <td colspan="1">Taluka: <b>Panvel</b></td>
-    <td colspan="2">Type: <b>Commercial</b></td>
+    <td colspan="2">Type: <b>Shop</b></td>
     </tr>
     <tr>
       <td colspan="4">Village: <b>Kharghar CIDCO Sec. No. <span id="SecNo">34</span></b></td>
@@ -141,7 +141,7 @@
       <td colspan="4" style="background: #d6e6f1; color: #2e6d8e;"><b>Rates Applicable (Per Sq. Mt)</b></td>
     </tr>
     <tr>
-      <td colspan="2">Commercial: <br><b><span id="PropValue">98900</span></b></td>
+      <td colspan="2">Shop: <br><b><span id="PropValue">98900</span></b></td>
       <td colspan="2">Open Land: <br><b><span id="LandValue">35100</span></b></td>
     </tr>
     <tr>
