--- a/Kharghar/shop.html
+++ b/Kharghar/shop.html
@@ -128,7 +128,7 @@
     <tr>
     <td colspan="1">District: <b>Raigad</b></td>
     <td colspan="1">Taluka: <b>Panvel</b></td>
-    <td colspan="2">Type: <b>Shop</b></td>
+    <td colspan="2">Type: <br><b>Shop</b></td>
     </tr>
     <tr>
       <td colspan="4">Village: <b>Kharghar CIDCO Sec. No. <span id="SecNo">34</span></b></td>
