--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -24,11 +24,11 @@
     <div class="modal">
       <table>
         <tr>
-          <td>Stamp Duty Charges (Male)</td>
+          <td>Stamp Duty Charges (Male 7%)</td>
           <td id="sdMale">3,00,000</td>
         </tr>
         <tr>
-          <td>Stamp Duty Charges (Female)</td>
+          <td>Stamp Duty Charges (Female 6%)</td>
           <td id="sdFemale">2,50,000</td>
         </tr>
         <tr>
@@ -36,7 +36,7 @@
           <td>30,000</td>
         </tr>
         <tr>
-            <td colspan="2">One percent rebate on stamp duty for women in Maharashtra State (w.e.f. 01/04/2021)</td>
+            <td colspan="2">1. One percent rebate on stamp duty for women in Maharashtra State (w.e.f. 01/04/2021)<br>2. Value is rounded to the next 100.</td>
         </tr>
       </table>
       <br>
