--- a/Taloja/flat.html
+++ b/Taloja/flat.html
@@ -143,7 +143,7 @@
       <td colspan="3">Built-up Area</td>
       <td colspan="1"><b><span id="CArea">76.02</span> m²</b></td>
     </tr>
-    <tr>
+    <tr id="terraceRow">
       <td colspan="3">Terrace Area</td>
       <td colspan="1"><b><span id="TerArea">00</span> m²</b></td>
     </tr>
