--- a/help.html
+++ b/help.html
@@ -32,7 +32,7 @@
   </div>
     <br>
     <div class="main">
-        <marquee>RATES ARE UPDATED FOR 1st April 2024 to 31st March 2025.</marquee>
+     <marquee>Ready Reckoner Rates updated for year 2025-26: valid till 31st March 2026.</marquee>
         <div id="refresh"><a href="homeRR.html"><button id="backArrow"><i class='bx bxs-chevrons-left' ></i>Back</button></a></div>
  <div id="helpSection">
   <h4>1. Select Sector Number: </h4>
