--- a/LLSD/option.html
+++ b/LLSD/option.html
@@ -21,8 +21,10 @@
   			<div class="form_wrap">
   				<div class="input_wrap">
   					<label for="period">License Period (in Months)</label>
-  					<input name="r1" type="radio" class="rr" onclick="window.open('vary.html','_self')" value="Fixed"> 22 MONTHS
-  					<input name="r1" style="margin-left: 20px;" type="radio" class="rr" value="Varying" onclick="window.open('varyt.html','_self')"> 33 MONTHS
+  					<input name="r1" style="margin-left: 20px;" type="radio" class="rr" onclick="window.open('vary.html','_self')" value="Fixed"> 22 MONTHS<br>
+  					<input name="r1" style="margin-left: 20px;" type="radio" class="rr" value="Varying" onclick="window.open('varyt.html','_self')"> 33 MONTHS<br>
+  					<input name="r1" style="margin-left: 20px;" type="radio" class="rr" value="Varying" onclick="window.open('custom.html','_self')"> CUSTOM
+
   				</div>
   			</div>
   		</form><br>
