--- a/Kharghar/flat.html
+++ b/Kharghar/flat.html
@@ -142,7 +142,7 @@
       <td colspan="4">Village: <b>Kharghar CIDCO Sec. No. <span id="SecNo">34</span></b></td>
     </tr>
     <tr>
-      <td colspan="2">Construction Type: <b>RCC Sure</b></td>
+      <td colspan="2">Construction Type: <b>RCC</b></td>
       <td colspan="2">Plot No./Survey No. <b>NA</b></td>
     </tr>
     <tr>
