--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            <hr>
            <label>Ready Reckoner Calculator</label>
         </div></a>
-        <a href="LLSD/home.html"><div class="container"><br>
+        <a href="LLSD/stamp-duty-calculator.html"><div class="container"><br>
           <center> <div id="circle">SD</div></center><br>
            <hr>
            <label>Leave & License Stamp Duty Calculator</label>
