--- a/homeRR.html
+++ b/homeRR.html
@@ -109,7 +109,7 @@
         <div class="max-w-4xl mx-auto px-6 py-5">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-4">
-                    <a href="../index.html" class="w-10 h-10 bg-gradient-to-r from-primary to-blue-600 rounded-xl flex items-center justify-center hover:from-blue-600 hover:to-blue-700 transition-all duration-200 shadow-sm group">
+                    <a href="index.html" class="w-10 h-10 bg-gradient-to-r from-primary to-blue-600 rounded-xl flex items-center justify-center hover:from-blue-600 hover:to-blue-700 transition-all duration-200 shadow-sm group">
                         <i class='bx bx-arrow-back text-white text-lg group-hover:-translate-x-0.5 transition-transform duration-200'></i>
                     </a>
                     <div>
