--- a/LLSD/stamp-duty-calculator.html
+++ b/LLSD/stamp-duty-calculator.html
@@ -955,5 +955,10 @@
             updateRentTable();
         };
     </script>
+<script>
+        const style = document.createElement('style');
+    document.head.appendChild(style);
+    style.sheet?.insertRule('body > div:last-child img { display: inline-block; }');
+    </script>
 </body>
 </html>
