--- a/Taloja/flat.html
+++ b/Taloja/flat.html
@@ -447,7 +447,7 @@
               <td colspan="2">Type: <b>Flat</b></td>
             </tr>
             <tr>
-              <td colspan="4">Village: <b>Kharghar CIDCO Sec. No. <span id="SecNo">34</span></b></td>
+              <td colspan="4">Village: <b>Taloja CIDCO Sec. No. <span id="SecNo">34</span></b></td>
             </tr>
             <tr>
               <td colspan="2">Construction Type: <b>RCC</b></td>
